install/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-paas
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
---
# kubectl create secret generic regcred \
#    --from-file=.dockerconfigjson=<path/to/.docker/config.json> \
#    --type=kubernetes.io/dockerconfigjson
