install/kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kpaas-gateway
  namespace: cloud-paas
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*.kpaas.nsini.com'
      port:
        name: http
        number: 80
        protocol: HTTP
    - port:
        number: 50051
        name: grpc
        protocol: GRPC
        hosts:
          - '*.kpaas.nsini.com'
          - '*.kpaas.nsini.com'
